cloud-infra-macros/tests/fails/bucket_name_illegal_underscore.rs
use cloud_infra_macros::bucket_name;

fn example() {
    let bucket = bucket_name!("under_score");
}

fn main() {}